--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
     "sass": "^1.52.2"
+  },
+  "dependencies": {
+    "postcss": "^8.4.14",
+    "react": "^18.1.0"
   }
 }
